header and footer

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
       <nav>
         <a href="www.start.com">START</a>
       </nav>
-      <img src="logo.png" alt="League of Legends logo" />
+      <div class="logo">
+        <img src="logo.png" class="logo" alt="League of Legends logo" />
+      </div>
     </header>
 
     <div class="noxus">
       <img src="noxus.jpg" alt="noxus" />
     </div>
+
+    <div class="graident"></div>
 
     <footer></footer>
   </body>
