--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="www.start.com">START</a>
+      <nav class="start">
+        <a class="a" href="www.start.com">START</a>
       </nav>
       <div class="logo">
         <img src="logo.png" class="logo" alt="League of Legends logo" />
@@ -18,10 +18,68 @@
     </header>
 
     <div class="noxus">
-      <img src="noxus.jpg" alt="noxus" />
+      <div class="gradient"></div>
     </div>
 
-    <div class="graident"></div>
+    <div class="titles">
+      <h1>WELCOME</h1>
+      <h3 class="h3">TO NOXUS</h3>
+      <h2 class="h2">SUMMONER</h2>
+    </div>
+
+    <div class="selcrest">
+      <div class="select">
+        <h1>SELECT YOUR CATEGORY</h1>
+      </div>
+
+      <div class="crest">
+        <img src="noxuscrest.png" alt="Picture of the noxus crest" />
+      </div>
+    </div>
+
+    <nav class="selection">
+      <div class="fight-button">
+        <a class="sel" href="www.fighter.com">
+          FIGHTER
+          <img class="fight" src="fighter.png" alt="Fighter Image" />
+        </a>
+      </div>
+
+      <div class="fight-button">
+        <a class="sel" href="www.mage.com"
+          >MAGE
+          <img class="mage" src="mage.png" alt="Mage Image" />
+        </a>
+      </div>
+
+      <div class="fight-button">
+        <a class="sel" href="www.assassin.com"
+          >ASSASSIN
+          <img class="assassin" src="assassin.png" alt="Assassin Image" />
+        </a>
+      </div>
+
+      <div class="fight-button">
+        <a class="sel" href="www.marksman.com"
+          >MARKSMAN
+          <img class="marksman" src="marksman.png" alt="Marksman Image" />
+        </a>
+      </div>
+
+      <div class="fight-button">
+        <a class="sel" href="www.support.com"
+          >SUPPORT
+          <img class="support" src="support.png" alt="Support Image" />
+        </a>
+      </div>
+
+      <div class="fight-button">
+        <a class="sel" href="www.tank.com"
+          >TANK
+          <img class="tank" src="tank.png" alt="Tank Image" />
+        </a>
+      </div>
+    </nav>
 
     <footer></footer>
   </body>
