--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website project</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <header>
@@ -13,7 +14,11 @@
         <a class="a" href="www.start.com">START</a>
       </nav>
       <div class="logo">
-        <img src="logo.png" class="logo" alt="League of Legends logo" />
+        <img
+          src="./homepage_photos/logo.png"
+          class="logo"
+          alt="League of Legends logo"
+        />
       </div>
     </header>
 
@@ -33,7 +38,10 @@
       </div>
 
       <div class="crest">
-        <img src="noxuscrest.png" alt="Picture of the noxus crest" />
+        <img
+          src="./homepage_photos/noxuscrest.png"
+          alt="Picture of the noxus crest"
+        />
       </div>
     </div>
 
@@ -41,42 +49,58 @@
       <div class="fight-button">
         <a class="sel" href="www.fighter.com">
           FIGHTER
-          <img class="fight" src="fighter.png" alt="Fighter Image" />
+          <img
+            class="fight"
+            src="./homepage_photos/fighter.png"
+            alt="Fighter Image"
+          />
         </a>
       </div>
 
       <div class="fight-button">
         <a class="sel" href="www.mage.com"
           >MAGE
-          <img class="mage" src="mage.png" alt="Mage Image" />
+          <img class="mage" src="./homepage_photos/mage.png" alt="Mage Image" />
         </a>
       </div>
 
       <div class="fight-button">
         <a class="sel" href="www.assassin.com"
           >ASSASSIN
-          <img class="assassin" src="assassin.png" alt="Assassin Image" />
+          <img
+            class="assassin"
+            src="./homepage_photos/assassin.png"
+            alt="Assassin Image"
+          />
         </a>
       </div>
 
       <div class="fight-button">
         <a class="sel" href="www.marksman.com"
           >MARKSMAN
-          <img class="marksman" src="marksman.png" alt="Marksman Image" />
+          <img
+            class="marksman"
+            src="./homepage_photos/marksman.png"
+            alt="Marksman Image"
+          />
         </a>
       </div>
 
       <div class="fight-button">
         <a class="sel" href="www.support.com"
           >SUPPORT
-          <img class="support" src="support.png" alt="Support Image" />
+          <img
+            class="support"
+            src="./homepage_photos/support.png"
+            alt="Support Image"
+          />
         </a>
       </div>
 
       <div class="fight-button">
         <a class="sel" href="www.tank.com"
           >TANK
-          <img class="tank" src="tank.png" alt="Tank Image" />
+          <img class="tank" src="./homepage_photos/tank.png" alt="Tank Image" />
         </a>
       </div>
     </nav>
