--- a/infohtml/kata.html
+++ b/infohtml/kata.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./infocss/kata.css">
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="../infocss/kata.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="start">
+        <a class="a" href="www.start.com">START</a>
+      </nav>
+      <div class="logo">
+        <img
+          src="../homepage_photos/logo.png"
+          class="logo"
+          alt="League of Legends logo"
+        />
+      </div>
+    </header>
+
+    <div class="battlequeen">
+      <div class="katagradient"></div>
+    </div>
+    <div class="kataname">
+      <h1>KATARINA</h1>
+      <h5>THE SINISTER BLADE</h5>
+    </div>
+
+    <div class="kata1">
+      <img class="midkata" src="../symbols/midlane.png" alt="Midlane" />
+      <h1 class="katarunestitle">RUNES</h1>
+    </div>
+
+    <div class="katarunes">
+      <div class="katadom">
+        <img src="../runes/domination.png" alt="Domination" />
+        <img src="../runes/electrocute.png" alt="electrocute" />
+        <img src="../runes/suddenimpact.png" alt="sudden impact" />
+        <img src="../runes/eyecollect.png" alt="Eyeball collection" />
+        <img src="../runes/ravenoushunter.png" alt="Ravenous hunter" />
+      </div>
+      <div class="kataprecision">
+        <img src="../runes/precision.png" alt="Precision">
+<img src="../runes/triumph.png" alt="Triumph">
+<img src="../runes/cdg.png" alt="Coup de grace">
+      </div>
+    </div>
+
+    <footer></footer>
+  </body>
 </html>
