--- a/infohtml/kata.html
+++ b/infohtml/kata.html
@@ -36,18 +36,85 @@
     </div>
 
     <div class="katarunes">
-      <div class="katadom">
-        <img src="../runes/domination.png" alt="Domination" />
-        <img src="../runes/electrocute.png" alt="electrocute" />
-        <img src="../runes/suddenimpact.png" alt="sudden impact" />
-        <img src="../runes/eyecollect.png" alt="Eyeball collection" />
-        <img src="../runes/ravenoushunter.png" alt="Ravenous hunter" />
+      <div class="katarune">
+        <div class="katadom">
+          <img src="../runes/domination.png" alt="Domination" />
+          <img src="../runes/electrocute.png" alt="electrocute" />
+          <img src="../runes/suddenimpact.png" alt="sudden impact" />
+          <img src="../runes/eyecollect.png" alt="Eyeball collection" />
+          <img src="../runes/ravenoushunter.png" alt="Ravenous hunter" />
+        </div>
+        <div class="kataprecision">
+          <img src="../runes/precision.png" alt="Precision" />
+          <img src="../runes/triumph.png" alt="Triumph" />
+          <img src="../runes/cdg.png" alt="Coup de grace" />
+        </div>
       </div>
-      <div class="kataprecision">
-        <img src="../runes/precision.png" alt="Precision">
-<img src="../runes/triumph.png" alt="Triumph">
-<img src="../runes/cdg.png" alt="Coup de grace">
+      <div class="katabonus">
+        <h1 class="katabtitle">BONUS:</h1>
+        <img src="../runes/adaption.webp" alt="Adaptive" />
+        <img src="../runes/adaption.webp" alt="Adaptive" />
+        <img src="../runes/magicresist.webp" alt="Magic resist" />
       </div>
+    </div>
+
+    <h1 class="kataitemtitle">ITEMS</h1>
+
+    <div class="kataitems">
+      <img src="../items/hextechrb.webp" alt="Hextech rocketbelt" />
+      <img src="../items/lichbane.webp" alt="Lich bane" />
+      <img src="../items/nashorstooth.webp" alt="Nashors tooth" />
+      <img src="../items/sorcerers.webp" alt="Sorcerer's shoes" />
+      <img src="../items/voidstaff.webp" alt="Void staff" />
+      <img src="../items/zhonyashg.webp" alt="Zhonya's hourglass" />
+    </div>
+
+    <h1 class="kataability">ABILITY</h1>
+
+    <div class="katasability">
+      <div class="katalvlcombo">
+        <h1 class="katatitle">LEVEL ORDER:</h1>
+        <div class="kataorder">
+          <img src="../abilities/deathlotus.webp" alt="Death lotus" />
+          <img src="../abilities/shunpo.webp" alt="Shunpo" />
+          <img src="../abilities/bouncingblades.webp" alt="Bouncing blades" />
+          <img src="../abilities/preparation.webp" alt="Preparation" />
+        </div>
+        <h1 class="katatitle">COMBO:</h1>
+        <div class="katacombo">
+          <img src="../abilities/shunpo.webp" alt="Shunpo" />
+          <img src="../abilities/preparation.webp" alt="Preparation" />
+          <img src="../abilities/bouncingblades.webp" alt="Boucning blades" />
+          <img src="../abilities/deathlotus.webp" alt="Death lotus" />
+        </div>
+      </div>
+      <div class="kataspells">
+        <h1 class="katatitle">SPELLS:</h1>
+        <div class="katasspells">
+          <img class="kataig" src="../spells/ignite.png" alt="Ignite" />
+          <img src="../spells/flash.png" alt="Flash" />
+        </div>
+      </div>
+    </div>
+
+    <h1 class="katactitle">COUNTERS</h1>
+    <div class="katacounter">
+      <div class="kataagainst">
+        <h1 class="katatitle">WEAK AGAINST:</h1>
+        <div class="katasagainst">
+        <img src="../championpfp/fizzpfp.png" alt="Fizz" />
+        <img src="../championpfp/zedpfp.png" alt="Zed" />
+        <img src="../championpfp/lissandra pfp.png" alt="Lissandra" />
+      </div>
+      </div>
+      <div class="katafor">
+        <h1 class="katatitle">STRONG AGAINST:</h1>
+        <div class="katasfor">
+        <img src="../championpfp/velkozpfp.png" alt="Vel'koz" />
+        <img src="../championpfp/xerathpfp.png" alt="Xerath" />
+        <img src="../championpfp/zoepfp.png" alt="Zoe" />
+      </div>
+    </div>
     </div>
 
     <footer></footer>
