--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
       <nav class="start">
         <a class="a" href="www.start.com">START</a>
+        <a class="info" href="www.info.com">INFO</a>
       </nav>
       <div class="logo">
         <img
