--- a/fighterselection.html
+++ b/fighterselection.html
@@ -1,50 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website project</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/fighter-selection.css" />
   </head>
   <body>
-    <header>
-        <nav class="start">
-          <a class="a" href="www.start.com">START</a>
-        </nav>
-        <div class="logo">
-          <img
-            src="./homepage_photos/logo.png"
-            class="logo"
-            alt="League of Legends logo"
-          />
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Website project</title>
+        <link rel="stylesheet" href="./css/main.css" />
+        <link rel="stylesheet" href="./css/fighter-selection.css" />
+      </head>
+      <body>
+        <header>
+          <nav class="start">
+            <a class="a" href="www.start.com">START</a>
+          </nav>
+          <div class="logo">
+            <img
+              src="./homepage_photos/logo.png"
+              class="logo"
+              alt="League of Legends logo"
+            />
+          </div>
+        </header>
+
+        <h1 class="syc">SELECT YOUR CHAMPION</h1>
+
+        <div class="fighter-grid">
+          <a href="morde.html">
+            <img
+              class="morde"
+              src="./assassin.photos/morde.jpg"
+              alt="Mordekaiser"
+            />
+          </a>
+          <a href="darius.html">
+            <img
+              class="darius"
+              src="./assassin.photos/dariuss.jpg"
+              alt="Darius"
+            />
+          </a>
+          <a href="riven.html">
+            <img class="riven" src="./assassin.photos/rivenn.jpg" alt="Riven" />
+          </a>
+          <a href="kled.html">
+            <img class="kled" src="./assassin.photos/kledd.jpg" alt="Kled" />
+          </a>
         </div>
-      </header>
-  
-      <h1 class="syc">SELECT YOUR CHAMPION</h1>
-  
-      <div class="assassin-grid">
-        <a href="kata.html">
-          <img class="kata" src="./assassin.photos/kata.jpg" alt="Katarina">
-        </a>
-        <a href="leblanc.html">
-          <img class="lb" src="./assassin.photos/lb.jpg" alt="Leblanc">
-        </a>
-        <a href="talon.html">
-          <img class="tl" src="./assassin.photos/tl.jpg" alt="Talon">
-        </a>
-      </div>
-      
-      <footer></footer>
-</body>
+
+        <footer></footer>
+      </body>
+    </html>
+  </body>
 </html>
